default avatar and tab icon

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500&family=Roboto+Slab:wght@400;500&display=swap"
       rel="stylesheet"
     />
+    <link rel="icon" href="Icon.png" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
